Workover proto API design
